gmain: Document more use cases of g_main_context_wakeup()

https://bugzilla.gnome.org/show_bug.cgi?id=701878